--- a/flink-runtime-web/web-dashboard/src/app/pages/overview/statistic/overview-statistic.component.less
+++ b/flink-runtime-web/web-dashboard/src/app/pages/overview/statistic/overview-statistic.component.less
@@ -17,50 +17,56 @@
  */
 @import "theme";
 
-nz-card {
-  ::ng-deep {
-    .ant-card-head {
-      border-bottom: 0;
-    }
+:host {
+  nz-card {
+    ::ng-deep {
+      .ant-card-head {
+        border-bottom: 0;
+      }
 
-    .ant-card-body {
-      padding: 0 24px 8px;
-    }
-  }
-}
-
-.total {
-  color: @success-color;
-  font-size: 36px;
-  line-height: 38px;
-}
-
-.footer {
-  margin-top: 16px;
-  padding-top: 9px;
-  border-top: 1px solid @border-color-split;
-
-  .field {
-    display: inline-block;
-    font-size: 14px;
-    line-height: 22px;
-
-    span {
-      line-height: 22px;
-
-      &:last-child {
-        margin-left: 8px;
-        color: @heading-color;
-        font-weight: 600;
+      .ant-card-body {
+        padding: 0 24px 8px;
       }
     }
   }
-}
 
-.col {
-  margin-bottom: 24px;
-}
+  .total {
+    color: @success-color;
+    font-size: 36px;
+    line-height: 38px;
+  }
 
-nz-divider {
-  margin: 0 12px;
+  .footer {
+    margin-top: @margin-md;
+    padding-top: @padding-sm;
+    border-top: 1px solid @border-color-split;
+
+    .field {
+      display: inline-block;
+      font-size: 14px;
+      line-height: 22px;
+
+      span {
+        line-height: 22px;
+
+        &:last-child {
+          margin-left: @margin-xs;
+          color: @text-color;
+          font-weight: 600;
+        }
+
+        &.warning {
+          color: @warning-color;
+        }
+      }
+    }
+  }
+
+  .col {
+    margin-bottom: 24px;
+  }
+
+  nz-divider {
+    margin: 0 12px;
+  }
 }
