--- a/flink-runtime-web/web-dashboard/src/app/pages/job/overview/backpressure/job-overview-drawer-backpressure.component.less
+++ b/flink-runtime-web/web-dashboard/src/app/pages/job/overview/backpressure/job-overview-drawer-backpressure.component.less
@@ -20,6 +20,14 @@
 
 :host {
   ::ng-deep {
+    .ant-table-row-indent {
+      padding-left: 0 !important;
+
+      & + .ant-table-row-expand-icon {
+        margin-top: 2px;
+      }
+    }
+
     .ant-table-cell {
       font-size: @font-size-sm;
     }
