--- a/flink-runtime-web/web-dashboard/src/app/pages/overview/statistic/overview-statistic.component.html
+++ b/flink-runtime-web/web-dashboard/src/app/pages/overview/statistic/overview-statistic.component.html
@@ -26,11 +26,13 @@
             <span>Total Task Slots</span>
             <span>{{ statistic['slots-total'] | number: '1.0-0' }}</span>
           </div>
-          <ng-container *ngIf="statistic['slots-blocked']">
+          <ng-container *ngIf="statistic['slots-free-and-blocked']">
             <nz-divider nzType="vertical"></nz-divider>
             <div class="field">
               <span>Blocked Free Slots</span>
-              <span class="warning">{{ statistic['slots-blocked'] | number: '1.0-0' }}</span>
+              <span class="warning">
+                {{ statistic['slots-free-and-blocked'] | number: '1.0-0' }}
+              </span>
             </div>
           </ng-container>
           <nz-divider nzType="vertical"></nz-divider>
