--- a/flink-runtime-web/web-dashboard/src/app/pages/job/overview/subtasks/job-overview-drawer-subtasks.component.html
+++ b/flink-runtime-web/web-dashboard/src/app/pages/job/overview/subtasks/job-overview-drawer-subtasks.component.html
@@ -146,7 +146,7 @@
                 "
               >
                 <tr>
-                  <td nzLeft [nzIndentSize]="1">{{ subtask['subtask'] }} [SPEC]</td>
+                  <td nzLeft [nzIndentSize]="1">{{ subtask['subtask'] }}</td>
                   <td>
                     <span *ngIf="attempt['metrics']['read-bytes-complete']; else loadingTemplate">
                       {{ attempt['metrics']['read-bytes'] | humanizeBytes }}
